# pencilc

./: CMakeLists.txt  PencilCompiler.cpp  README.md  README.txt
test/: CMakeLists.txt
test/ill-formed/: 0001_pointer_ret_type.c  0002_array_ret_type.c  0005_pointer_unqualified_array_in_param.c  0006_void_pointer_in_param.c  0007_variadic_function.c  0010_incomplete_array_param.c  0011_star_size_array_param.c  0012_star_size_array_in_2nd_dim_in_param.c  0020_function_pointer_param.c  0030_unqualified_array_param.c  0031_nonconst_array_param.c  0032_nonrestrict_array_param.c  0033_nonstatic_array_param.c  0040_complex_vla_param.c  0050_pointer_array_param.c  0060_union_param.c  0070_pointer_member_in_struct_param.c  0071_pointer_member_in_struct_array_param.c  0072_function_pointer_in_struct_array_param.c  0073_pointer_in_struct_in_struct.c  0074_pointer_in_separate_struct_in_struct.c  0075_incomplete_struct_in_param.c  0076_flexible_member_in_struct_in_param.c  0077_incomplete_struct_in_param.c  0078_foward_decl_struct_in_param_with_prototype.c  0080_union_in_struct_in_param.c  0081_pointer_in_struct_ret.c  0082_pointer_in_incomplete_struct_ret.c  0083_union_in_struct_ret.c  0178_incomplete_struct_in_local_var.c  0179_incomplete_struct_params_assign.c  0370_incomplete_struct_malloc_complete_then_assign.c
test/well-formed/: 0001_int_param.c  0002_void_ret.c  0004_struct_ret.c  0010_pass_by_pointer_param.c  0070_struct_param.c  0071_array_in_struct_param.c  0072_struct_in_struct.c  0073_separate_struct_in_struct.c  0074_array_in_struct_ret.c  0080_enum_in_param.c  (+1 more)
